Fix search button behavior on mobile

--- a/src/components/styles/Header.scss
+++ b/src/components/styles/Header.scss
@@ -114,9 +114,9 @@
 			position: static;
 			transform: none;
 			.search-input {
-				width: calc(100% - 30px);
-				padding: 1rem 1.5rem;
-				padding-right: 60px;
+				width: calc(100% - 30px) !important;
+				padding: 1rem 1.5rem !important;
+				padding-right: 60px !important;
 				height: 36px;
 				font-size: 14px;
 			}
@@ -124,6 +124,9 @@
 				background-color: transparent;
 				width: 36px;
 				height: 36px;
+				&.show-search {
+					box-shadow: none;
+				}
 				.search-icon {
 					font-size: 1rem;
 					&.show-search {
